// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ParagraphBlock matches snapshot correctly 1`] = `
<div
  data-node-view-wrapper=""
  style="position: relative; pointer-events: none; white-space: normal;"
>
  <div
    class="brd-c-bfhcug"
  >
    <p
      as="p"
      class="brd-c-hMGRDP"
      data-node-view-content=""
      data-placeholder=""
      style="white-space: pre-wrap;"
    />
    <button
      aria-haspopup="dialog"
      class="ButtonUnstyled-root brd-c-dsuUsp brd-c-dsuUsp-eWWUXK-btnType-text brd-c-dsuUsp-fdOzqt-size-sm brd-c-ivBjhy brd-c-iAZzvg"
      role="button"
      tabindex="0"
      type="button"
    >
      <i
        data-testid="mock-icon-DragSecondary"
      />
    </button>
  </div>
</div>
`;

exports[`ParagraphBlock shows placeholder normally 1`] = `
<div
  data-node-view-wrapper=""
  style="position: relative; pointer-events: none; white-space: normal;"
>
  <div
    class="brd-c-bfhcug"
  >
    <p
      as="p"
      class="brd-c-hMGRDP"
      data-node-view-content=""
      data-placeholder="placeholder"
      style="white-space: pre-wrap;"
    />
    <button
      aria-haspopup="dialog"
      class="ButtonUnstyled-root brd-c-dsuUsp brd-c-dsuUsp-eWWUXK-btnType-text brd-c-dsuUsp-fdOzqt-size-sm brd-c-ivBjhy brd-c-iAZzvg"
      role="button"
      tabindex="0"
      type="button"
    >
      <i
        data-testid="mock-icon-DragSecondary"
      />
    </button>
  </div>
</div>
`;
